# dj-startkit

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  entrypoint.sh  gunicorn.conf.py  manage.py  pyproject.toml
apps/api/v1/: urls.py
apps/api/v1/auth/: schema.py  serializers.py  urls.py  views.py
apps/api/v1/organization/: filters.py  schema.py  serializers.py  urls.py  views.py
apps/api/v1/user/: filters.py  schema.py  serializers.py  urls.py  views.py
apps/organization/: admin.py  models.py
apps/organization/migrations/: 0001_initial.py  0002_rename_org_organizationinvitation_organization_and_more.py  0003_rename_organizationinvitation_invitation_and_more.py  0004_alter_invitation_options_alter_member_options_and_more.py
apps/user/: admin.py  managers.py  models.py
apps/user/migrations/: 0001_initial.py  0002_alter_user_options.py
core/: celery.py  jwt.py  logging.py  models.py  pagination.py  root_view.py  serializers.py  settings.py  storages.py  urls.py
tests/: conftest.py
